--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-  "build": "vite build",
-  "preview": "vite preview",
-  "deploy": "gh-pages -d dist"
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@fontsource/roboto": "5.2.6",
